objects/AppTrackerAudit__c.object
<CustomObject>
    <fields>
        <fullName>DateTime_Console_Opens__c</fullName>
        <label>DateTime Console Opens</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TimeInThisVisit__c</fullName>
        <label>TimeInThisVisit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ConsoleTracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>AppTrackerAudit</label>
    <nameField>
        <displayFormat>CT-{00000}</displayFormat>
        <label>AppTrackerAudit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AppTrackerAudit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>